Atualizado o link do instagram

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                 <img src="{{ url_for('static', filename='uploads/pdf.png') }}" class="icon-btn">
                 Catálogo Online
             </a>
-            <a href="https://instagram.com/SEUPERFIL" target="_blank" class="link-button">
+            <a href="https://instagram.com/kioda.3d" target="_blank" class="link-button">
                 <img src="{{ url_for('static', filename='uploads/instagram.png') }}" class="icon-btn">
                 Instagram
             </a>
