Consertado o link do TikTok onde dava Error 404

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             <span data-pt="Instagram" data-en="Instagram">Instagram</span>
         </a>
 
-        <a href="https://www.tiktok.com/@kioda.3d" target="_blank" class="link-button">
+        <a href="https://www.tiktok.com/@kioda_3d?_r=1&_t=ZS-940SE8ngg4q" target="_blank" class="link-button">
             <img src="{{ url_for('static', filename='uploads/tiktok.png') }}" class="icon-btn">
             <span data-pt="TikTok" data-en="TikTok">TikTok</span>
         </a>
